k8s-app/service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-hello-demo-internal-service
  #namespace: staging
  #annotations:
  #      service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
  - protocol: TCP
    port: 8081
    targetPort: 8081
    name: management
  selector:
    app: spring-boot-hello-demo
  type: ClusterIP
