k8s-app/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: spring-boot-hello-demo
  #namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx  
spec:
  rules:
  - host: $ING_HOST #petclinic.<public-IP>.nip.io
    http:
      paths:
      - backend:
          serviceName: spring-boot-hello-demo-internal-service
          servicePort: 80
        path: /
      - backend:
          serviceName: spring-boot-hello-demo-internal-service
          servicePort: 80
        path: /manage/health
      - backend:
          serviceName: spring-boot-hello-demo-internal-service
          servicePort: 80
        path: /manage/info
